Frontend refactor, LinkedAccounts panel added, deletion recommendations option, adding stats to LovedTracks panel