@@ -1,40 +1,59 @@
 package com.example.service;
 
+import com.example.model.SpotifyUser;
 import com.example.model.SpotifyUserLink;
 import com.example.model.User;
+import com.example.repository.SpotifyUserRepository;
 import com.example.repository.UserRepository;
 import com.example.repository.SpotifyUserLinkRepository;
+import com.example.repository.UserTrackRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
+    private final UserTrackRepository userTrackRepository;
+    private final SpotifyUserRepository spotifyUserRepository;
     private final SpotifyUserLinkRepository spotifyUserLinkRepository;
 
     public List<Map<String, String>> getUsersLinkedToSpotify(String spotifyId) {
         List<SpotifyUserLink> links = spotifyUserLinkRepository.findBySpotifyUser_SpotifyId(spotifyId);
 
         return links.stream()
-                .map(link -> {
-                    User user = link.getUser();
-                    Map<String, String> dto = new HashMap<>();
-                    dto.put("lastfmUsername", user.getLastfmUsername());
-                    return dto;
-                })
+                .map(SpotifyUserLink::getUser)
+                .filter(userTrackRepository::existsByUser)
+                .map(user -> Map.of("lastfmUsername", user.getLastfmUsername()))
                 .filter(dto -> dto.get("lastfmUsername") != null && !dto.get("lastfmUsername").isEmpty())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<User> getAll() {
         return userRepository.findAll();
+    }
+
+    @Transactional
+    public void unlinkSpotifyAccount(String spotifyId, String lastfmUsername) {
+        SpotifyUser spotifyUser = spotifyUserRepository.findBySpotifyId(spotifyId)
+                .orElseThrow(() -> new RuntimeException("Spotify user not found"));
+
+        User lastfmUser = userRepository.findByLastfmUsername(lastfmUsername)
+                .orElseThrow(() -> new RuntimeException("Last.fm user not found"));
+
+        Optional<SpotifyUserLink> link = spotifyUserLinkRepository.findBySpotifyUserAndUser(spotifyUser, lastfmUser);
+
+        if (link.isEmpty()) {
+            throw new RuntimeException("Link between Spotify and Last.fm accounts not found");
+        }
+
+        spotifyUserLinkRepository.delete(link.get());
     }
 
     public User getById(Long id) {
